# cpp_concepts

./: .clang-tidy  README.md  stack_from_linked_list.cpp  type_erasure.cpp
functions/: function_as_callbacks.cpp
linked_lists/: CMakeLists.txt
linked_lists/.cache/clangd/index/: helper_functions.hpp.05320ABDE9A2577E.idx  linked_lists_insertion.cpp.5FC2A54577ED46DD.idx  node.hpp.FBEB3FA70076E5EC.idx  stack_from_linked_list.cpp.132AEDE1A0FF2068.idx
linked_lists/include/: node.hpp
linked_lists/include/linked_lists/: helper_functions.hpp
linked_lists/src/: linked_lists_insertion.cpp  stack_from_linked_list.cpp
